<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="main">Main</string>
    <string name="login">AVANTI</string>
    <string name="WPSScanResult">Resultados Escaneados</string>

    <string name="app_name">AVANTI</string>
    <string name="about">About</string>
    <string name="profile">Profile</string>    
    <string name="evacuation">Evacuation Protocol</string>   
    <string name="Register">Registro</string>
    <string name="Position">Posición</string>
    <string name="ParticleRokon">Particle Rokon</string>
    <string name="accelerometerreader">Accelerometer Reader</string>
    <string name="cameraactivity">CameraActivity</string>
    <string name="VoicePlaybackSystem">Sistema de Voz</string>

    
    <string name="guiar">Indicar Ruta</string>
    <string name="destino">Buscar destino</string>
    <string name="voz">Busqueda por voz</string>
    
 	<string name="user">Usuario:</string>
 	<string name="password">Contraseña:</string>
 	<string name="remember_password">Recordar Contraseña</string>
    <string name="enter">Entrar</string>
    <string name="register_user">Registrarse</string>
    <string name="description">Imagen</string>
    
    <string name="name">Nombre:</string>
    <string name="lastname">Apellidos:</string>
    <string name="cancel">Cancelar</string>
    <string name="acept">Aceptar</string>
    <string name="save">Guardar</string>
    
    <string name="loading">Cargando(…, &#8230;)</string>
    
    <string name="coordenadaX">X:</string>
    <string name="coordenadaY">Y:</string>
    <string name="coordenadaZ">Z:</string>
    
     <string name="particleanimation">Particle Animation</string>
     <string name="TestAccelerometer">Prueba del acelerómetro</string>
   
     
</resources>
