<?xml version="1.0" encoding="utf-8"?>
<TableLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent" 
    android:layout_width="fill_parent"
    android:background="#FFFFFF">
    <ImageView 
    		android:src="@drawable/avanti_logo"
    		android:contentDescription="@string/description"
    		android:paddingBottom="15dp"
    		android:paddingTop="5dp"
    	/>
    <TableRow> 
        <TextView 
            android:text="@string/user"
            android:width ="120dp"
            android:textStyle="bold"
            android:padding="10dp"
            android:textSize="18sp"
            android:textColor="#001111"
            />
        <EditText 
            android:id="@+id/txtUserName" 
            android:inputType="textPersonName"
            android:width="200dp" 
            android:textColor="#000000"
            />
        
    </TableRow> 
    <TableRow>
        <TextView
            android:text="@string/password"
            android:textStyle="bold"
            android:padding="10dp"
            android:textSize="18sp"
            android:textColor="#001111"
            />
        <EditText 
            android:id="@+id/txtPassword" 
            android:inputType="textPassword"
            android:textColor="#000000"
            />
    </TableRow>
    <TableRow>
        <TextView />

        <CheckBox
            android:id="@+id/chkRememberPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:button="?android:attr/listChoiceIndicatorMultiple"
            android:checked="false"
            android:text="@string/remember_password"
            android:textColor="#000000" />
   
    </TableRow>
    <TableRow>
        <Button 
            android:id="@+id/buttonSignIn" 
            android:text="@string/enter" 
          	android:textStyle="bold"
           />
    </TableRow>
    <TableRow>
        <Button 
            android:id="@+id/buttonRegFromLogin" 
            android:text="@string/register_user"
            android:textStyle="bold"
            />
    </TableRow>

</TableLayout>